@@ -80,20 +80,18 @@ class BaseHmLight(CustomEntity):
             unique_id,
         )
 
-    @property
-    def _e_level(self) -> HmFloat:
-        """Return the level entity of the device."""
-        return self._get_entity(field_name=FIELD_LEVEL, entity_type=HmFloat)
-
-    @property
-    def _e_on_time_value(self) -> HmAction:
-        """Return the on_time entity of the device."""
-        return self._get_entity(field_name=FIELD_ON_TIME_VALUE, entity_type=HmAction)
-
-    @property
-    def _e_ramp_time_value(self) -> HmAction:
-        """Return the ramp time entity device."""
-        return self._get_entity(field_name=FIELD_RAMP_TIME_VALUE, entity_type=HmAction)
+    def _init_entity_fields(self) -> None:
+        """Init the entity fields."""
+        super()._init_entity_fields()
+        self._e_level: HmFloat = self._get_entity(
+            field_name=FIELD_LEVEL, entity_type=HmFloat
+        )
+        self._e_on_time_value: HmAction = self._get_entity(
+            field_name=FIELD_ON_TIME_VALUE, entity_type=HmAction
+        )
+        self._e_ramp_time_value: HmAction = self._get_entity(
+            field_name=FIELD_RAMP_TIME_VALUE, entity_type=HmAction
+        )
 
     @property
     @abstractmethod
@@ -188,10 +186,12 @@ class BaseHmLight(CustomEntity):
 class CeDimmer(BaseHmLight):
     """Class for homematic dimmer entities."""
 
-    @property
-    def _e_channel_level(self) -> HmSensor:
-        """Return the channel level entity of the device."""
-        return self._get_entity(field_name=FIELD_CHANNEL_LEVEL, entity_type=HmSensor)
+    def _init_entity_fields(self) -> None:
+        """Init the entity fields."""
+        super()._init_entity_fields()
+        self._e_channel_level: HmSensor = self._get_entity(
+            field_name=FIELD_CHANNEL_LEVEL, entity_type=HmSensor
+        )
 
     @property
     def is_on(self) -> bool:
@@ -229,15 +229,15 @@ class CeColorDimmer(CeDimmer):
         "TV simulation",
     ]
 
-    @property
-    def _e_color(self) -> HmInteger:
-        """Return the color entity of the device."""
-        return self._get_entity(field_name=FIELD_COLOR, entity_type=HmInteger)
-
-    @property
-    def _e_effect(self) -> HmInteger:
-        """Return the effect entity of the device."""
-        return self._get_entity(field_name=FIELD_PROGRAM, entity_type=HmInteger)
+    def _init_entity_fields(self) -> None:
+        """Init the entity fields."""
+        super()._init_entity_fields()
+        self._e_color: HmInteger = self._get_entity(
+            field_name=FIELD_COLOR, entity_type=HmInteger
+        )
+        self._e_effect: HmInteger = self._get_entity(
+            field_name=FIELD_PROGRAM, entity_type=HmInteger
+        )
 
     @property
     def hs_color(self) -> tuple[float, float]:
@@ -300,10 +300,12 @@ class CeColorDimmer(CeDimmer):
 class CeColorTempDimmer(CeDimmer):
     """Class for homematic dimmer with color temperature entities."""
 
-    @property
-    def _e_color_level(self) -> HmFloat:
-        """Return the color level entity of the device."""
-        return self._get_entity(field_name=FIELD_COLOR_LEVEL, entity_type=HmFloat)
+    def _init_entity_fields(self) -> None:
+        """Init the entity fields."""
+        super()._init_entity_fields()
+        self._e_color_level: HmFloat = self._get_entity(
+            field_name=FIELD_COLOR_LEVEL, entity_type=HmFloat
+        )
 
     @property
     def color_temp(self) -> int:
@@ -343,35 +345,27 @@ class CeIpFixedColorLight(BaseHmLight):
         "PURPLE": (300.0, 100.0),
     }
 
-    @property
-    def _e_color(self) -> HmSelect:
-        """Return the color entity of the device."""
-        return self._get_entity(field_name=FIELD_COLOR, entity_type=HmSelect)
-
-    @property
-    def _e_channel_color(self) -> HmSensor:
-        """Return the channel color entity of the device."""
-        return self._get_entity(field_name=FIELD_CHANNEL_COLOR, entity_type=HmSensor)
-
-    @property
-    def _e_level(self) -> HmFloat:
-        """Return the level entity of the device."""
-        return self._get_entity(field_name=FIELD_LEVEL, entity_type=HmFloat)
-
-    @property
-    def _e_channel_level(self) -> HmSensor:
-        """Return the channel level entity of the device."""
-        return self._get_entity(field_name=FIELD_CHANNEL_LEVEL, entity_type=HmSensor)
-
-    @property
-    def _e_on_time_unit(self) -> HmAction:
-        """Return the on time unit entity of the device."""
-        return self._get_entity(field_name=FIELD_ON_TIME_UNIT, entity_type=HmAction)
-
-    @property
-    def _e_ramp_time_unit(self) -> HmAction:
-        """Return the ramp time unit entity of the device."""
-        return self._get_entity(field_name=FIELD_RAMP_TIME_UNIT, entity_type=HmAction)
+    def _init_entity_fields(self) -> None:
+        """Init the entity fields."""
+        super()._init_entity_fields()
+        self._e_color: HmSelect = self._get_entity(
+            field_name=FIELD_COLOR, entity_type=HmSelect
+        )
+        self._e_channel_color: HmSensor = self._get_entity(
+            field_name=FIELD_CHANNEL_COLOR, entity_type=HmSensor
+        )
+        self._e_level: HmFloat = self._get_entity(
+            field_name=FIELD_LEVEL, entity_type=HmFloat
+        )
+        self._e_channel_level: HmSensor = self._get_entity(
+            field_name=FIELD_CHANNEL_LEVEL, entity_type=HmSensor
+        )
+        self._e_on_time_unit: HmAction = self._get_entity(
+            field_name=FIELD_ON_TIME_UNIT, entity_type=HmAction
+        )
+        self._e_ramp_time_unit: HmAction = self._get_entity(
+            field_name=FIELD_RAMP_TIME_UNIT, entity_type=HmAction
+        )
 
     @property
     def is_on(self) -> bool:
