@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [tool.black]
 target-version = ["py39", "py310"]
 exclude = 'generated'
+line-length = 88
 
 [tool.isort]
 # https://github.com/PyCQA/isort/wiki/isort-Settings
@@ -140,7 +141,7 @@ overgeneral-exceptions = [
 runtime-typing = false
 
 [tool.pylint.CODE_STYLE]
-max-line-length-suggestions = 72
+max-line-length-suggestions = 88
 
 [tool.pytest.ini_options]
 testpaths = [
