@@ -2,6 +2,7 @@ Version 2022.7.15 (2022-07-30)
 - Fix pylint, mypy issues due to newer versions
 - Remove properties of final members
 - Add types to Final
+- Init entity fields in init method
 
 Version 2022.7.14 (2022-07-28)
 - Add HmIP-BS2 to custom entities
